GNU myserver NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.?

** Bug fixes

  Fix a segfault when the same log is shared by different virtual hosts.

  Improved logging system, now more detailed error messages are provided.

  Fix some tests when the test suite is executed under a chroot.

  Fix some portability problems under FreeBSD systems.

  Handle properly HTTP/1.0 requests without a "Host" header.

  Use the chunked transfer encoding only with HTTP/1.1 clients.

  The build doesn't fail if zlib is not found.


* Noteworthy changes in release 0.9.2

** Bug fixes

  Vulnerability fix for CVE-2009-4029[1].

  Sockets operations under Windows are now done using gnulib.

  Fix the X-Sendfile directive when using keep-alive connections.


* Noteworthy changes in release 0.9.1

** New features

  A GUI written in python to easily manage the server.

  Gnulib usage.

  Support for the Gopher protocol.

  gettext i18n.

  X-Sendfile directive for FastCGI.

  Support for crypted passwords in the security files.

========================================================================

Copyright (C) 2008-2010 Free Software Foundation, Inc.

Permission is granted to copy, distribute and/or modify this document
under the terms of the GNU Free Documentation License, Version 1.3 or
any later version published by the Free Software Foundation; with no
Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
Texts.  A copy of the license is included in the ``GNU Free
Documentation License'' file as part of this distribution.