@@ -18,6 +18,9 @@ GNU myserver NEWS                                    -*- outline -*-
 
   The build doesn't fail if zlib is not found.
 
+** New features
+
+   The PROXY handler now maintains a pool of keep-alive connections to reuse.
 
 * Noteworthy changes in release 0.9.2
 
